# trading_bot

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  build_installer.ps1  docker-compose.yml  examples.md  faq.md  installer.iss  main.py  pyproject.toml  requirements.txt  risk_config.yaml  run_bot.py  setup.cfg  setup.py  tox.ini  trading_bot.spec  usage.md
app/: __init__.py  yaml_loader.py
app/config/: __init__.py
app/config/loaders/: base_loader.py
app/config/schemas/: __init__.py
app/core/: __init__.py
app/gui/: __init__.py
audit/: trade_logger.py
config/: config.yaml  exchange_config.yaml  gui_config.yaml  logging_config.yaml  risk_config.yaml  strategies_config.yaml
config/loaders/: __init__.py  app_config_loaders_env_loader.odt  app_config_loaders_yaml_loader.odt  trading_loader.py
config/schemas/: base_config.py  trading_config.py
data_processing/: analysis.py  market_data.py
data_processing/feeds/: base_feed.py  ccxt_feed.py  realtime.py
data_processing/indicators/: __init__.py  moving_averages.py  trend.py
data_processing/processors/: __init__.py  orderbook_processor.py  trade_processor.py  volatility.py
docs/: api.md  configuration.md  installation.md  installation_guide.md
docs/guides/: README.md
examples/: __init__.py  basic_trading.py  risk_management.py  strategy_development.py
exchanges/: __init__.py  base_exchange.py  binance.py  exchange_factory.py  ftx.py
gui/: main_window.py
gui/components/: position_table.py  trading_panel.py
gui/widgets/: __init__.py  control_panel.py  price_chart.py  trade_table.py
logging/: __init__.py  logger.py
portfolio/: __init__.py
risk_management/: position_sizing.py  risk_monitor.py
scripts/data_import/: import_data.py
scripts/deployment/: deploy.ps1  deploy.sh
strategies/: __init__.py  arbitrage_strat.py  base_strategy.py  volatility_strat.py
temp/: app_config.odt  app_config_exceptions.odt  config-template_yaml.odt
tests/: __init__.py
tests/integration/: __init__.py  test_exchanges.py  test_strategies.py  test_trading_flow.py
tests/unit/: test_bot_interface.py  test_config.py  test_data_processing.py  test_exchanges.py  test_gui.py  test_liquidity_monitor.py  test_logger.py  test_position_sizing.py  test_position_tracker.py  test_risk_management.py  test_risk_monitor.py  test_stop_loss.py  test_strategies.py
utils/: queue_manager.py  task_scheduler.py  validation.py
utils/formatting/: numbers.py  text.py  time.py
utils/notifications/: notification_manager.py  visual.py
utils/portfolio/: __init__.py
(+37 files in other folders)
