[metadata]
name = trading_bot
version = 1.0.0
description = A sophisticated trading bot for automated trading of securities
long_description = file: README.md
long_description_content_type = text/markdown
author = Trading Bot Contributors
author_email = your.email@example.com
url = https://github.com/yourusername/trading_bot
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Office/Business :: Financial :: Investment

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pandas>=2.0.0
    numpy>=1.24.0
    ccxt>=4.0.0
    plotly>=5.18.0
    PyQt5>=5.15.0
    playsound>=1.3.0
    pydantic>=2.0.0
    python-dotenv>=1.0.0
    asyncio>=3.4.3
    aiohttp>=3.9.0
    PyYAML>=6.0.0
    python-binance>=1.0.19
    websockets>=11.0.0
    SQLAlchemy>=2.0.0
    loguru>=0.7.0

[options.packages.find]
exclude =
    tests*
    docs*

[options.entry_points]
console_scripts =
    trading-bot = trading_bot.main:main

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,build,dist

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -v --cov=app
